# Network-Protocol

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
src/: CMakeLists.txt  ChecksumCalculator.h  TCPConnection.h  TCPHeader.h  TCPSegment.h  main.cpp  protocol.cpp  protocol.h
test/: CMakeLists.txt  SimulatedNetwork.h  TcpHeaderTests.cpp  TcpSegmentTests.cpp  main_test.cpp
